<resources>
    <string name="app_name">段子</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="user">个人中心</string>
    <string name="confirm_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="post">发表</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="next_page">下一页</string>
    <string name="logout">退出登录</string>
    <string name="no_nickname_user">匿名用户</string>
    <string name="user_info">个人信息</string>
    <string name="please_input">请输入内容</string>
    <string name="post_joke">发表段子</string>
    <string name="upload_image">上传图片</string>
    <string name="thumbnail">缩略图</string>
    <string name="delete">删除</string>
    <string name="view_joke">查看段子</string>
    <string name="share">分享</string>
</resources>
